# recon

./: README.md
c/: .gitignore  CMakeLists.txt  README.md
c/allocator/: CMakeLists.txt
c/allocator/demo/: main.c
c/allocator/include/recon/: arena.h  pool.h
c/allocator/src/: arena.c  pool.c
c/allocator/test/: allocator_test.c
c/cmake/: UnityDiscoverTests.cmake
c/common/include/recon/: recon_thread.h
c/errors/: CMakeLists.txt
c/errors/demo/: main.c
c/errors/include/recon/: error_context.h  error_stack.h
c/errors/src/: error_context.c  error_stack.c
c/errors/test/: errors_test.c
c/hashtable/: CMakeLists.txt
c/hashtable/demo/: main.c
c/hashtable/include/recon/: intern_table.h
c/hashtable/src/: intern_table.c
c/hashtable/test/: hashtable_test.c
c/hwregister/: CMakeLists.txt
c/hwregister/demo/: main.c  volatile_proof.c
c/hwregister/include/recon/: uart_registers.h
c/hwregister/src/: uart_registers.c
c/hwregister/test/: hwregister_test.c
c/matrixrotate/: CMakeLists.txt
c/matrixrotate/demo/: main.c
c/matrixrotate/include/recon/: matrix_rotate.h
c/matrixrotate/src/: matrix_rotate.c
c/matrixrotate/test/: matrixrotate_test.c
c/ringbuffer/: CMakeLists.txt
c/ringbuffer/demo/: main.c
c/ringbuffer/include/recon/: recon_thread.h  recon_time.h  ringbuffer.h
c/ringbuffer/test/: ringbuffer_test.c
c/statemachine/: CMakeLists.txt
c/statemachine/demo/: main.c
c/statemachine/include/recon/: printer_controller.h  state_machine.h
c/statemachine/src/: printer_controller.c
c/statemachine/test/: statemachine_test.c
c/tokenizer/: CMakeLists.txt
c/tokenizer/demo/: main.c
c/tokenizer/include/recon/: gcode_tokenizer.h
c/tokenizer/src/: gcode_tokenizer.c
c/tokenizer/test/: tokenizer_test.c
cpp/: CMakeLists.txt  README.md  build_n_test.cmd
cpp/algorithms/: CMakeLists.txt
cpp/algorithms/demo/: main.cpp
cpp/algorithms/include/recon/algorithms/: bitcounting.h  comparestr.h  contigarray.h  custom_strchr.h  expressionmatch.h  fibonacci.h  removeduplicates.h  reversestring.h  reversewords.h  strintintstr.h
cpp/algorithms/src/: bitcounting.cpp  comparestr.cpp  contigarray.cpp  custom_strchr.cpp  expressionmatch.cpp  fibonacci.cpp  removeduplicates.cpp  reversestring.cpp  reversewords.cpp  strintintstr.cpp
cpp/algorithms/test/: bitcounting_test.cpp  comparestr_test.cpp  contigarray_test.cpp  custom_strchr_test.cpp  expressionmatch_test.cpp  fibonacci_test.cpp  removeduplicates_test.cpp  reversestring_test.cpp  reversewords_test.cpp  strintintstr_test.cpp
cpp/bitcounting/: bitcounting.cpp  bitcounting.vcxproj
cpp/comparestr/: comparestr.cpp  comparestr.vcxproj
cpp/contigarray/: contigarray.cpp  contigarray.vcxproj
cpp/datastructures/: CMakeLists.txt
cpp/datastructures/demo/: main.cpp
cpp/datastructures/include/recon/datastructures/: DoublyLinkedList.h  PhoneRecord.h  SinglyLinkedList.h
cpp/datastructures/src/: DoublyLinkedList.cpp  SinglyLinkedList.cpp
cpp/datastructures/test/: DoublyLinkedList_test.cpp  SinglyLinkedList_test.cpp
cpp/doublylinkedlist/: doublylinkedlist.cpp  doublylinkedlist.vcxproj
cpp/expressionmatch/: expressionmatch.cpp  expressionmatch.vcxproj
cpp/fibonacci/: fibonacci.cpp  fibonacci.vcxproj
cpp/lnklstreverse/: lnklstreverse.cpp  lnklstreverse.vcxproj
cpp/lnklstrevpairs/: lnklstrevpairs.cpp  lnklstrevpairs.vcxproj
cpp/memory/: CMakeLists.txt
cpp/memory/demo/: main.cpp
cpp/memory/include/recon/memory/: ExceptionSafetyExamples.h  GraphNode.h  LegacyHandle.h  ScopedLock.h  TrackedResource.h
cpp/memory/src/: ExceptionSafetyExamples.cpp  GraphNode.cpp  LegacyHandle.cpp  TrackedResource.cpp
cpp/memory/test/: ExceptionSafetyExamples_test.cpp  GraphNode_test.cpp  LegacyHandle_test.cpp  ScopedLock_test.cpp  TrackedResource_test.cpp
cpp/moderncpp/: CMakeLists.txt
cpp/moderncpp/demo/: main.cpp
cpp/moderncpp/include/recon/moderncpp/: Buffer.h  Clamp.h  Describe.h  GenericStack.h  MoveSemanticsExamples.h  Pair.h  TypeBranching.h  VariadicSum.h
cpp/moderncpp/src/: Buffer.cpp  MoveSemanticsExamples.cpp
cpp/moderncpp/test/: Buffer_test.cpp  Clamp_test.cpp  Describe_test.cpp  GenericStack_test.cpp  MoveSemanticsExamples_test.cpp  Pair_test.cpp  TypeBranching_test.cpp  VariadicSum_test.cpp
cpp/removeduplicates/: removeduplicates.cpp  removeduplicates.vcxproj
cpp/reversestring/: reversestring.cpp  reversestring.vcxproj
cpp/reversewords/: reversewords.cpp  reversewords.vcxproj
cpp/strchr/: strchr.cpp  strchr.vcxproj
cpp/strintintstr/: strintintstr.cpp  strintintstr.vcxproj
cs/: Requirements.md
cs/AsyncPatterns/: AsyncPatterns.cs  Deadlocks.cs
cs/CodingQuestions/: 01_Collections_TopEarnerByDepartment.cs  02_Collections_FlattenNestedList.cs  03_Collections_GroupAndCount.cs  04_Collections_FindDuplicates.cs  05_Collections_TopNItems.cs  06_Strings_ReverseString.cs  07_Strings_Palindrome.cs  08_Strings_CharacterFrequency.cs  09_Strings_FirstNonRepeatingChar.cs  10_Strings_Anagram.cs  11_OOP_GenericStack.cs  12_OOP_IoCContainer.cs  13_OOP_SOLIDRefactor.cs  14_OOP_RepositoryPattern.cs  15_OOP_Decorator.cs  16_Algorithms_FizzBuzz.cs  17_Algorithms_Fibonacci.cs  18_Algorithms_BinarySearch.cs  19_Algorithms_IsPrime.cs  20_Algorithms_MissingNumber.cs  21_Async_ParallelFetch.cs  22_Async_TimeoutPattern.cs  23_Async_CallbackToAsync.cs  24_Patterns_CacheWithExpiry.cs  25_Patterns_ParseCSV.cs  26_Async_RetryWithBackoff.cs  27_Patterns_RateLimiter.cs  28_Patterns_EventBus.cs  29_Strings_LongestSubstring.cs  29a_Strings_LongestSubstringCharArray_1.cs
cs/Interfaces/: IRepository.cs  ServiceRegistration.cs  UserRepository.cs
cs/IoC/: Requirements.md
cs/IoC_MVC/: IoC_MVC.csproj
cs/IoC_MVC.Tests/: IoC_MVC.Tests.csproj
cs/OOP/: CompositionVsInheritance.cs  IDisposable.cs
cs/SOLID/: DependencyInversion.cs  InterfaceSegregation.cs  LiskovSubstitution.cs  OpenClosed.cs  SingleResponsibility.cs
cs/SimpleIoC/: Resolver.cs  (+1 more)
cs/SimpleIoC.UnitTest/: SimpleIoC.UnitTest.csproj  packages.config
docs/: Algorithms_and_coding.doc
java/: .gitignore  README.md  pom.xml
tf/: Readme.md
(+225 files in other folders)
